Add LegalThings One
Changed Live Contracts link to LegalThings One

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
 				    <a class="lc-primary-action sr-button button-1 button-small circled">
 					   Request a demo
 				    </a>
-				    <a href="https://livecontracts.io" class="sr-button button-1-ghost button-small circled">
-					    Visit Live Contracts
+				    <a href="https://legalthings.one" class="sr-button button-1-ghost button-small circled">
+					    Visit LegalThings One
 				    </a>
 			    </p>
 		    </div>
