--- a/company.html
+++ b/company.html
@@ -181,7 +181,7 @@
     <section id="hero" class="block -blue edge--bottom--reverse row-section align-center" style="margin-top: 57px;">
 	    <div class="spacer-medium"></div>
 		    <div class="wrapper align-center"><a href="index.html">
-			    <h1><img style="vertical-align: middle;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
+			    <h1 style="font-weight: 350;"><img style="vertical-align: middle;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
 			    <h3 class="subtitle-1">
 				    The new digital backbone for every organization
 			    </h3>
@@ -312,23 +312,16 @@ We believe in the motto ‘practice what you preach’. Therefore, all our own c
 		      <div class="spacer-small"></div>
 		      <div class="wrapper">
 			      <h2 class="align-center" style="font-weight:200;">
-			      Environment
-				  </h3>
+			      Testimonial
+			     </h2> 
 		      <div class="spacer-small"></div>
-		      <div class="column one-half" style="text-align: left;">
-			      From the first day of our incorporation, our motto has been ‘time to go paperless.’ In 2015 we knew that this was a real possibility. Now, in 2018, we’re actually there. At least at our own office. <br><br>
-With LegalThings’ DTM solution you too can drastically decrease your circulation of legal, hardcopy documents. Reach your carbon footprint KPI’s while impressing your clients with state of the art digital end-to-end procedures. <br><br> But we don't stop there.
-			    <!--div class="spacer-small"></div>
-			<a href="https://onetreeplanted.org" target="_blank">
-						<img src="img/logo/OneTreePlanted logo square green.png" class="align-center" style="max-height: 200px; max-width: 200px;" alt="One Tree Plant"></a!-->
+		      <div style="padding-left: 15%; padding-right: 15%;">
+			      <div class="js-video">
+				      <iframe width="560" src="https://www.youtube.com/embed/Q6z8Czhodyo?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			      </div>
 		      </div>
-		      <div class="column one-half last-col core-verticals__list" style="text-align: left;">We want to play our part in restoring the damage that’s already been done. Because of that, we've partnered up with the One Tree Plant program.
-The One Tree Plant program plants trees in North America, South America, Asia, and Africa. Most of their projects help with restoration from forest fires and floods, as well as creating jobs, building communities, and protecting habitat for biodiversity.<br><br>
-At LegalThings we fully support this mission. Every month, each client, one tree.
-
+			  <div class="spacer-small"></div>
 		      </div>
-		      </div>
-		      <div class="spacer-small"></div>
 		      </div>
 
 	    <section class="core-verticals row-section wrapper whiteSection-about" id="core-verticals">
@@ -504,23 +497,16 @@ Contact information            </div>
     </div>
       <!-- FAQ - END -->
     <!-- END .wrapper -->
-    <div class="spacer-small"></div>
+   <!-- FOOTER -->
     <div class="wrapper" style="display: flex; justify-content: center;">
+          ©2018 LegalThings
+    </div>
+       <div class="wrapper" style="display: flex; justify-content: center;">
+        <div class="spacer-mini"></div>
 	    <a href="terms-cookies.html#t-and-c">Terms and Conditions</a> &nbsp; - &nbsp; <a href="terms-cookies.html#cookies">Cookie Statement</a>
 		    </div>
+		          <div class="spacer-small"></div>
 
-    <!-- PAGEBODY -->
-    <!-- FOOTER -->
-    <footer id="footer" class="footer-dark text-light">
-      <div class="wrapper">
-        <div class="copyright">
-          ©2018 LegalThings
-        </div>
-        <div class="footer-menu">
-          <a href="terms-cookies.html" target="_blank">Terms and Conditions</a>
-        </div>
-      </div>
-    </footer>
     <!-- FOOTER -->
     <!-- END #page-content -->
     <!-- PAGE CONTENT -->
