--- a/features.html
+++ b/features.html
@@ -11,8 +11,6 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lora:400italic,700italic" rel="stylesheet" type="text/css">
   <!-- CSS -->
-<link rel="stylesheet" href="files/css/odometer-theme-default.css" />
-<script src="files/js/odometer.min.js"></script>
   <!--<link rel="stylesheet" id="fontawesome-style-css" href="files/css/font-awesome.min.css" type="text/css" media="all"/>-->
   <!--<link rel="stylesheet" id="ionic-icons-style-css" href="files/css/ionicons.css" type="text/css" media="all"/>-->
   <!--<link rel="stylesheet" id="revolution-slider-main-css" href="files/revolution/css/settings.css" type="text/css"-->
@@ -182,7 +180,7 @@
     <section id="hero" class="block -blue edge--bottom--reverse row-section align-center" style="margin-top: 57px;">
 	    <div class="spacer-small"></div>
 		    <div class="wrapper align-center"><a href="index.html">
-			    <h1><img style="vertical-align: middle;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
+			    <h1 style="font-weight: 350;"><img style="vertical-align: middle;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
 			    <h3 class="subtitle-1">
 				    The new digital backbone for every organization
 			    </h3>
@@ -369,7 +367,7 @@
 		      <div class="spacer-small"></div>
 		      <div class="wrapper">
 			      <h2 class="align-center" style="font-weight: 200;">
-			      Example video's
+			      Example videos
 				  </h3>
 		      <div class="spacer-small"></div>
 		      <div class="column one-half" style="text-align: left;">
@@ -382,7 +380,20 @@
 				      <iframe width="560" src="https://www.youtube.com/embed/WOkgEYAzxTw?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			      </div>
 		      </div>
+		      <div class="spacer-medium"></div>
+		      <div class="column one-half" style="text-align: left;">
+			      <div class="js-video">
+				      <iframe width="560" src="https://www.youtube.com/embed/x3RfkShbxHs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			      </div>
 		      </div>
+		      <div class="column one-half last-col" style="text-align: left;">
+			      <div class="js-video">
+				      <iframe width="560" src="https://www.youtube.com/embed/GyA2OjIHSVA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			      </div>
+		      </div>
+		      </div>
+		      </div>
+	
 		      <div class="spacer-small"></div>
 		      </div>
         <! END CORE VERTICALS>
@@ -460,22 +471,16 @@
     </div>
       <!-- FAQ - END -->
     <!-- END .wrapper -->
+    <!-- FOOTER -->
     <div class="wrapper" style="display: flex; justify-content: center;">
+          ©2018 LegalThings
+    </div>
+       <div class="wrapper" style="display: flex; justify-content: center;">
+        <div class="spacer-mini"></div>
 	    <a href="terms-cookies.html#t-and-c">Terms and Conditions</a> &nbsp; - &nbsp; <a href="terms-cookies.html#cookies">Cookie Statement</a>
 		    </div>
+		          <div class="spacer-small"></div>
 
-    <!-- PAGEBODY -->
-    <!-- FOOTER -->
-    <footer id="footer" class="footer-dark text-light">
-      <div class="wrapper">
-        <div class="copyright">
-          ©2018 LegalThings
-        </div>
-        <div class="footer-menu">
-          <a href="terms-cookies.html" target="_blank">Terms and Conditions</a>
-        </div>
-      </div>
-    </footer>
     <!-- FOOTER -->
     <!-- END #page-content -->
     <!-- PAGE CONTENT -->
