--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:350,400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,350,400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lora:400italic,700italic" rel="stylesheet" type="text/css">
   <!-- CSS -->
-<link rel="stylesheet" href="files/css/odometer-theme-default.css" />
-<script src="files/js/odometer.min.js"></script>
+<link rel="stylesheet" href="files/css/style.css"/>
+
   <!--<link rel="stylesheet" id="fontawesome-style-css" href="files/css/font-awesome.min.css" type="text/css" media="all"/>-->
   <!--<link rel="stylesheet" id="ionic-icons-style-css" href="files/css/ionicons.css" type="text/css" media="all"/>-->
   <!--<link rel="stylesheet" id="revolution-slider-main-css" href="files/revolution/css/settings.css" type="text/css"-->
@@ -32,9 +32,10 @@
   <!--<link rel="stylesheet" href="files/css/step-form-wizard-all.css" type="text/css" media="screen, projection">-->
   <!-- nicer scroll in steps -->
   <!--<link rel="stylesheet" href="files/css/jquery.mCustomScrollbar.min.css">-->
-  <link rel="stylesheet" href="files/dist/compress.css">
+  <!link rel="stylesheet" href="files/dist/compress.css">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="img/favicon.png" />
+  <link rel="stylesheet" href="files/dist/compress.css">
   <!-- DOCUMENT TITLE -->
   <title>LegalThings &middot; The new digital backbone for every business</title>
 
@@ -181,7 +182,7 @@
     <!-- HERO  -->
     <section id="hero" class="hero-full parallax-section text-light" data-parallax-image="img/header-background.png">
 		    <div id="page-title" class="wrapper align-center">
-			    <h1><img style="vertical-align: middle;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
+			    <h1 style="font-weight: 350;"><img style="vertical-align: middle;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
 			    <h3 class="subtitle-1">
 				    The new digital backbone for every organization
 			    </h3>
@@ -746,7 +747,7 @@ Every month, each client, one tree.
 
 	    </div>
 	    </div>
-<! END IMPLEMENTATION>
+<!-- END IMPLEMENTATION -->
 
 
 	    <!-- START REQUEST A DEMO -->
@@ -773,8 +774,8 @@ Every month, each client, one tree.
 				</div>
 		    	</div>
 	   </section>
-
 		    <!-- END REQUEST A DEMO -->
+		    
 	    <!-- div id="register" class="row-section subscribe-block">
 		    <div class="wrapper align-center">
 			    <h2>
@@ -823,23 +824,16 @@ Every month, each client, one tree.
     </div>
       <!-- FAQ - END -->
     <!-- END .wrapper -->
+    <!-- FOOTER -->
     <div class="wrapper" style="display: flex; justify-content: center;">
+          ©2018 LegalThings
+    </div>
+       <div class="wrapper" style="display: flex; justify-content: center;">
+        <div class="spacer-mini"></div>
 	    <a href="terms-cookies.html#t-and-c">Terms and Conditions</a> &nbsp; - &nbsp; <a href="terms-cookies.html#cookies">Cookie Statement</a>
 		    </div>
+		          <div class="spacer-small"></div>
 
-
-    <!-- PAGEBODY -->
-    <!-- FOOTER -->
-    <footer id="footer" class="footer-dark text-light">
-      <div class="wrapper">
-        <div class="copyright">
-          ©2018 LegalThings
-        </div>
-        <div class="footer-menu">
-          <a href="terms-cookies.html" target="_blank">Terms and Conditions</a>
-        </div>
-      </div>
-    </footer>
     <!-- FOOTER -->
     <!-- END #page-content -->
     <!-- PAGE CONTENT -->
