--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400italic,700italic" rel="stylesheet" type="text/css">
   <!-- CSS -->
 <link rel="stylesheet" href="files/css/style.css"/>
+<link rel="stylesheet" href="files/dist/compress.css">
 
   <!--<link rel="stylesheet" id="fontawesome-style-css" href="files/css/font-awesome.min.css" type="text/css" media="all"/>-->
   <!--<link rel="stylesheet" id="ionic-icons-style-css" href="files/css/ionicons.css" type="text/css" media="all"/>-->
@@ -32,10 +33,8 @@
   <!--<link rel="stylesheet" href="files/css/step-form-wizard-all.css" type="text/css" media="screen, projection">-->
   <!-- nicer scroll in steps -->
   <!--<link rel="stylesheet" href="files/css/jquery.mCustomScrollbar.min.css">-->
-  <!link rel="stylesheet" href="files/dist/compress.css">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="img/favicon.png" />
-  <link rel="stylesheet" href="files/dist/compress.css">
   <!-- DOCUMENT TITLE -->
   <title>LegalThings &middot; The new digital backbone for every business</title>
 
@@ -176,13 +175,13 @@
         </div>
 
       </div>
- <! STICKY BOTTOM BAR END -->
+ <!-- STICKY BOTTOM BAR END -->
 
 
     <!-- HERO  -->
     <section id="hero" class="hero-full parallax-section text-light" data-parallax-image="img/header-background.png">
 		    <div id="page-title" class="wrapper align-center">
-			    <h1 style="font-weight: 350;"><img style="vertical-align: middle;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
+			    <h1 style="font-weight: 400;"><img style="vertical-align: middle; width:100px;" src="img/logo/icon-white.png" alt="LT Logo"> LegalThings</h1>
 			    <h3 class="subtitle-1">
 				    The new digital backbone for every organization
 			    </h3>
@@ -274,7 +273,7 @@
 
     <!-- HERO -->
     <!-- PAGEBODY -->
-    	      <! START CUSTOMERS >
+<!-- START CUSTOMERS -->
 	      </div>
 	      <div class="block -blue edge--bottom--reverse row-section align-center">
 		      <div class="wrapper-small">
@@ -848,16 +847,6 @@ Every month, each client, one tree.
 <br>
           We will get in touch with you as soon as possible!
         </p>
-        	      <div class="_form_83 align-center"></div><script src="https://firm24.activehosted.com/f/embed.php?id=83" type="text/javascript" charset="utf-8"></script>
-        <!--form class="newsletter-form" novalidate="true">
-          <input type="email" class="newsletter-email" name="EMAIL" placeholder="Your Email Adress">
-          <input type="submit" class="newsletter-submit" value="Submit">
-          <!--p class="newsletter-error"></p>
-          <p class="newsletter-success">
-            You have successfully requested a demo.
-          </p>
-        </form>
-      </div>
     </div>
     <!-- SCRIPTS -->
     <script src="files/dist/compress.js"></script>
