Fix t&c and request demo
Fix t&c and request demo

--- a/company.html
+++ b/company.html
@@ -498,6 +498,7 @@ Contact information            </div>
       <!-- FAQ - END -->
     <!-- END .wrapper -->
    <!-- FOOTER -->
+   <div class="spacer-medium"></div>
     <div class="wrapper" style="display: flex; justify-content: center;">
           ©2018 LegalThings
     </div>
@@ -505,7 +506,7 @@ Contact information            </div>
         <div class="spacer-mini"></div>
 	    <a href="terms-cookies.html#t-and-c">Terms and Conditions</a> &nbsp; - &nbsp; <a href="terms-cookies.html#cookies">Cookie Statement</a>
 		    </div>
-		          <div class="spacer-small"></div>
+		          <div class="spacer-medium"></div>
 
     <!-- FOOTER -->
     <!-- END #page-content -->
@@ -532,7 +533,7 @@ Contact information            </div>
         </form>
       </div>
     </div>
-    <!-- SCRIPTS -->
+    <!- SCRIPTS -->
     <script src="files/dist/compress.js"></script>
     <script src="https://checkout.stripe.com/checkout.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.8.0/parsley.min.js"></script>
@@ -566,7 +567,7 @@ Contact information            </div>
 
 
 
-        <!-- Twitter universal website tag code -->
+        <!- Twitter universal website tag code -->
     <script>
         !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
         },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
