--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ Every month, each client, one tree.
         <div class="spacer-mini"></div>
 	    <a href="terms-cookies.html#t-and-c">Terms and Conditions</a> &nbsp; - &nbsp; <a href="terms-cookies.html#cookies">Cookie Statement</a>
 		    </div>
-		          <div class="spacer-small"></div>
+		          <div class="spacer-medium"></div>
 
     <!-- FOOTER -->
     <!-- END #page-content -->
@@ -843,10 +843,10 @@ Every month, each client, one tree.
       </a>
       <div class="popup__content">
         <h3><strong>Please fill in your details</h3>
-        <p align="center">
-<br>
+        <p align="center"><br>
           We will get in touch with you as soon as possible!
         </p>
+                	<div class="_form_83"></div><script src="https://firm24.activehosted.com/f/embed.php?id=83" type="text/javascript" charset="utf-8"></script>
     </div>
     <!-- SCRIPTS -->
     <script src="files/dist/compress.js"></script>
