--- a/terms-cookies.html
+++ b/terms-cookies.html
@@ -293,7 +293,9 @@ User environment: the dashboard within LegalThings Saas that only the End Users 
 <div class="spacer-mini"></div>
 <strong>9. (Other) Responsibilities Subscriber</strong>
 <div class="spacer-mini"></div>
-9.1 In order to enable proper implementation of the Subscription by LEGALTHINGS BV, Subscriber LEGALTHINGS BV will always provide all cooperation necessary to enable LegalThings BV to properly execute the Agreement, including informing about all facts and circumstances that may affect on the service and its availability.
+9.1 The Subscriber will provide all cooperation that is necessary for a proper use of the LegalThings SaaS, and a proper execution of LEGALTHINGS B.V.’s obligations under the
+agreement with the Subscriber. This cooperation will in any case consist of the following points: - informing about all facts and circumstances that may affect the service and availability of LegalThings SaaS
+- using the LegalThings SaaS in an up-to-date version of a leading browser type (Chrome, Firefox, Edge, Safari).
 <div class="spacer-mini"></div>
 9.2 Subscriber bears the risk of the (correct) use, the correct application and the correct management, including the input of the documents and use of the communication possibilities in his organization of LegalThings SaaS, websites, databases and other products and materials and of the LegalThings BV to provide services. Subscriber is responsible for (checking the) correctness of the data that are processed using a service provided by LEGALTHINGS BV and the way in which the results of the service are used. Subscriber is also responsible for instructions to and use by users.
 <div class="spacer-mini"></div>
