New Mailchimp form
Added Mailchimp form

--- a/index.html
+++ b/index.html
@@ -1017,34 +1017,36 @@
                     </h5>
                     <div class="spacer-small"></div>
                     <div class="form">
-                  <form id="contact" action="" method="post">
+                   <form action="https://firm24.us17.list-manage.com/subscribe/post" method="post">
+          			  <input type="hidden" name="u" value="1508bdb96b4379a9aeb07c6e8">
+           				 <input type="hidden" name="id" value="f8769372ea">
                   <div class="column one-fifth align-center">
                   <fieldset>
-                  <input placeholder="First name" type="text" tabindex="1" required>
+                  <input placeholder="First name" type="text" tabindex="1" name="MERGE1" id="MERGE1" size="25" required>
                   </fieldset>
                   </div>
                   <div class="column one-fifth align-center">
                   <fieldset>
-                  <input placeholder="Last name" type="text" tabindex="2" required>
+                  <input placeholder="Last name" type="text" tabindex="2" name="MERGE2" id="MERGE2" size="25" required>
                   </fieldset>
                   </div>
                   <div class="column one-fifth align-center">
                    <fieldset>
-                  <input placeholder="Company name" type="text" tabindex="3" required>
+                  <input placeholder="Company name" type="text" tabindex="3" name="MERGE3" id="MERGE3" size="25" required>
                   </fieldset>
                   <div class="spacer-small"></div>
                   <fieldset>
-                     <button name="submit" type="submit" id="contact-submit" data-submit="...Sending" class="sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Sign up for free!</button>
+                     <button name="b_1508bdb96b4379a9aeb07c6e8_f8769372ea" type="submit" id="contact-submit" data-submit="...Sending" class="sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Sign up for free!</button>
                     </fieldset>
                   </div>
                   <div class="column one-fifth align-center">
                   <fieldset>
-                   <input placeholder="Email Address" type="email" tabindex="4" required>
+                   <input placeholder="Email Address" type="email" tabindex="4" name="MERGE0" id="MERGE0" size="25" required>
                    </fieldset>
                   </div>
                   <div class="column one-fifth last-col align-center">
                     <fieldset>                 
-                    <input placeholder="Phone Number" type="tel" tabindex="5" required>
+                    <input placeholder="Phone Number" type="tel" tabindex="5" name="MERGE4" id="MERGE4" size="25" required>
                     </fieldset>
                   </div>
                   <!--div class="column one-sixth last-col align-center">
