New thankyou page
- Thank you page after signing up for a demo.

--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@
                     </h2>
                     <div class="spacer-medium"></div>
                     <div class="column-section clearfix founders">
+
                         <div class="column one-fourth team-member align-center">
                             <a href="https://www.linkedin.com/in/rschmitz/" class="team-image" target="_blank">
                                 <img src="img/team/round_version/rick_schmitz.png" alt="Rick Schmitz - LegalThings">
@@ -668,6 +669,7 @@
                                 </ul>
                             </div>
                         </div>
+
                         <div class="column one-fourth team-member align-center">
                             <a href="https://www.linkedin.com/in/arnolddaniels/" class="team-image" target="_blank">
                                 <img src="img/team/round_version/arnold_daniels.png" alt="Arnold Daniels - LegalThings">
@@ -692,6 +694,7 @@
                                 </ul>
                             </div>
                         </div>
+
                         <div class="column one-fourth team-member align-center">
                              <a href="https://www.linkedin.com/in/migchelsen/" class="team-image" target="_blank">
 	                            <img src="img/team/round_version/martijn_migchelsen.png" alt="Martijn Migchelsen - LegalThings">
@@ -714,6 +717,7 @@
                                 </ul>
                             </div>
                         </div>
+
                         <div class="column one-fourth team-member align-center last-col">
 	                        <a href="https://www.linkedin.com/in/svenstam/" class="team-image" target="_blank">
                                 <img src="img/team/round_version/sven_stam.png" alt="Sven Stam - LegalThings">
@@ -746,6 +750,7 @@
 
                     <div class="spacer-small"></div>
                     <div class="column-section clearfix founders">
+
                         <div class="column one-fourth team-member align-center">
       	                   <a href="https://www.linkedin.com/in/martijnbroersma/" class="team-image" target="_blank">
                                 <img src="img/team/round_version/martijn_broersma.png" alt="Martijn Broersma - LegalThings">
@@ -767,10 +772,11 @@
                                 </ul>
                               </div>
                         </div>
+
                         <div class="column one-fourth team-member align-center">
                             <a class="team-image" href="https://www.linkedin.com/in/rickros/" target="_blank">
-                                <img class="one" src="img/team/round_version/rick_ross.png" alt="Rick Ros - LegalThings">
-                                <img class="two" src="img/team/round_version/rick_ross_b.png" alt="Rick Ros - LegalThings">
+                                <img class="" src="img/team/round_version/rick_ross.png" alt="Rick Ros - LegalThings">
+                                <!--img class="two" src="img/team/round_version/rick_ross_b.png" alt="Rick Ros - LegalThings"!-->
                             </a>
                             <div class="team-content">
                                 <h5 class="team-name uppercase">
@@ -784,7 +790,8 @@
                                 </ul>
                         </div>
                         </div>
-                        <div class="column one-fourth team-member align-center last-col">
+
+                        <div class="column one-fourth team-member align-center">
                             <a href="https://www.linkedin.com/in/diederick-cardon-18a85912/" class="team-image" target="_blank">
                                 <img src="img/team/round_version/diederick-cardon.png" alt="Diederick Cardon - LegalThings">
                             </a>
@@ -801,35 +808,7 @@
                             </div>
                         </div>
 
-                        <div class="column one-fourth team-member last-col align-center">
-                            <a class="team-image" href="https://www.linkedin.com/in/michael-nieveld-7b52551a/" target="_blank">
-                                <img class="one" src="img/team/round_version/michael_nieveld.png" alt="Michael Nieveld - LegalThings">
-                                <img class="two" src="img/team/round_version/michael_nieveld_b.png" alt="Michael Nieveld - LegalThings">
-                            </a>
-                            <div class="team-content">
-                                <h5 class="team-name uppercase">
-                                    <strong>Michael Nieveld</strong>
-                                </h5>
-                                <h6 class="subtitle-2">Legal & Tax</h6>
-                                <ul class="socialmedia-widget hover-fade-1">
-                                    <li class="linkedin">
-                                        <a href="https://www.linkedin.com/in/michael-nieveld-7b52551a/" target="_blank"></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                                 
-                        
-                    </div>
-
-					<!-- END TEAM Second Row !-->
-                    <!-- Rest of the Team !-->
-			<div class="show-more">
-				<!--Div to expand on click !-->
-				<div class="column-section clearfix">
-
-					<div class="column one-fourth team-member align-center">
+                        <div class="column one-fourth team-member align-center last-col">
                             <a class="team-image" href="https://www.linkedin.com/in/ties-van-dijk-985035157/" target="_blank">
                                 <img class="" src="img/team/round_version/ties.png" alt="Ties van Dijk - LegalThings">
                             </a>
@@ -844,6 +823,31 @@
                                     </li>
                                 </ul>
                         </div>
+                     </div> 
+                    </div>
+
+					<!-- END TEAM Second Row !-->
+                    <!-- Rest of the Team !-->
+			<div class="show-more">
+				<!--Div to expand on click !-->
+				<div class="column-section clearfix">
+
+					<div class="column one-fourth team-member align-center">
+                            <a class="team-image" href="https://www.linkedin.com/in/michael-nieveld-7b52551a/" target="_blank">
+                                <img class="" src="img/team/round_version/michael_nieveld.png" alt="Michael Nieveld - LegalThings">
+                                <!--img class="two" src="img/team/round_version/michael_nieveld_b.png" alt="Michael Nieveld - LegalThings"!-->
+                            </a>
+                            <div class="team-content">
+                                <h5 class="team-name uppercase">
+                                    <strong>Michael Nieveld</strong>
+                                </h5>
+                                <h6 class="subtitle-2">Legal & Tax</h6>
+                                <ul class="socialmedia-widget hover-fade-1">
+                                    <li class="linkedin">
+                                        <a href="https://www.linkedin.com/in/michael-nieveld-7b52551a/" target="_blank"></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
 
 					<div class="column one-fourth team-member align-center">
@@ -1042,7 +1046,7 @@
                    <fieldset class="fieldset-2">
                   <input placeholder="Company name" type="text" tabindex="3" name="MERGE3" id="MERGE3" size="25" required>
                   </fieldset>
-                  <div class="spacer-mini button-mob"></div>
+                  <div class="spacer-small button-mob"></div>
                   <fieldset>
                      <button name="b_1508bdb96b4379a9aeb07c6e8_f8769372ea" type="submit" id="contact-submit" data-submit="...Sending" class="sr-button inline button-1 button-small circled"><i class="fa fa-rocket"></i> Submit!</button>
                     </fieldset>
@@ -1066,6 +1070,7 @@
                 </form>
               </div>
             </div>
+            <div class="spacer-medium"></div>
         </div>
       </div>
    <!-- END Request demo form -->
