--- a/terms-cookies.html
+++ b/terms-cookies.html
@@ -572,37 +572,23 @@ The settings for removing cookies can be found in the toolbar of your browser. Y
             <footer id="footer" class="footer-dark text-light">
                 <div class="wrapper">
                     <div class="copyright">
-                      <div class="footer-menu">
-                      <a href="https://legalthings.io">
                         ©2018 LegalThings
-                      </a>
-                    </div>
                     </div>
                     <div class="footer-menu">
-					<div class="hero-nav__socials align-center">
-						<a href="https://medium.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
-					            <i class="fa fa-medium"></i>
-				            </a>
-				            <a href="https://twitter.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
-					            <i class="icon-twitter"></i>
-				            </a>
-				            <a href="https://www.youtube.com/channel/UCaHcF-xterKYTKSpY4xgKiw" class="hero-nav__socials-icon"
-				               target="_blank">
-					            <i class="icon-youtube-3"></i>
-				            </a>
-				            <a href="https://github.com/legalthings" class="hero-nav__socials-icon" target="_blank">
-					            <i class="ion-social-github"></i>
-				            </a>
-				            <a href="https://t.me/joinchat/AJWQTUDKtDlsuGHVFb40eQ" class="hero-nav__socials-icon"
-				               target="_blank">
-					            <i class="fa fa-telegram"></i>
-				            </a>
-			            </div>
+          <div class="hero-nav__socials">
+                    <a href="https://twitter.com/ltonetwork" class="hero-nav__socials-icon" target="_blank">
+                      <i class="icon-twitter"></i>
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCaHcF-xterKYTKSpY4xgKiw" class="hero-nav__socials-icon"
+                       target="_blank">
+                      <i class="icon-youtube-3"></i>
+                    </a>
+                  </div>
                         <!--a href="documents/terms-and-conditions.pdf" target="_blank">Terms and Conditions</a!-->
                     </div>
                     <div class="footer-menu">
-                      <a href="terms-cookies.html" target="_blank">Terms and Conditions</a> <br>
-                      <a href="terms-cookies.html#cookies" target="_blank">Cookie statement</a>
+                        <a href="terms-cookies.html" target="_blank">Terms & Conditions</a> <br>
+                        <a href="terms-cookies.html#cookies" target="_blank" class="button-mob">Cookie statement</a>
                     </div>
                 </div>
             </footer>
